objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>How_did_we_connect_with_them__c</fullName>
        <label>How did we connect with them?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_do_decisions_get_made_within_an_org__c</fullName>
        <label>How do decisions get made within an org?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_is_success_being_measured__c</fullName>
        <label>How is success being measured?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IL_Contract_End_Date__c</fullName>
        <formula>(( National_Contract_Length_months__c )*30)+(  CloseDate  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IL Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IL_FB_Estimated_Avg_Budget__c</fullName>
        <description>Used by YBN.</description>
        <label>IL - FB - Estimated Avg Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IL_PPC_Estimated_Avg_Budget__c</fullName>
        <label>IL-PPC- Estimated Avg Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IL_Weighted_Forecast__c</fullName>
        <formula>Total_Contract_Value__c * Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total opp amount x percent to close</inlineHelpText>
        <label>IL Weighted Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IMS_Referral__c</fullName>
        <label>IMS Referral</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ideal_Service__c</fullName>
        <label>Ideal Service</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_person_Demo_Completed_Date__c</fullName>
        <label>In-person Demo Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_person_Demo_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In-person Demo Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inbound_Lead__c</fullName>
        <formula>"NO"</formula>
        <label>Inbound Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Opp__c</fullName>
        <label>Inbound Opp</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initially_Pitched_By_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initially Pitched By Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Financial_Decis_Maker_Title__c</fullName>
        <label>Key Financial Decis Maker - Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_PPl_Their_Role_in_the_Deal__c</fullName>
        <inlineHelpText>List all our contacts and decision makers and what role they are playing in the deal</inlineHelpText>
        <label>Key PPl &amp; Their Role in the Deal</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Keywords_to_Scrape__c</fullName>
        <inlineHelpText>What keywords do we want to use in the scraping to determine how the customer is currently ranking. Keywords should be separated by a comma.</inlineHelpText>
        <label>Keywords to Scrape</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Name1__c</fullName>
        <label>Contact Last Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Stage_Change_Date__c</fullName>
        <label>Last Stage Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change__c</fullName>
        <label>Last Status Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Gen_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Gen Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Record_type_Conversion__c</fullName>
        <description>The Original Lead Recordtype for converted records, used to make sure this goes to the correct recordtype</description>
        <label>Lead Record type (Conversion)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail_2__c</fullName>
        <inlineHelpText>For alternate testing</inlineHelpText>
        <label>Lead Source Detail 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Volume_Goal__c</fullName>
        <label>Lead Volume Per Mth Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Warming_Campaign__c</fullName>
        <label>Lead Warming Campaign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Leads_by_Web_G1_Contract_Length__c</fullName>
        <label>Leads by Web / G1 Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leads_by_Web_G1__c</fullName>
        <label>Leads by Web / G1 Budget</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Length_of_Sales_Cycle__c</fullName>
        <inlineHelpText>Number of days in the customer's sales cycle from lead to close. Example - 120 days</inlineHelpText>
        <label>Length of Sales Cycle</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_of_Endorsement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Letter of Endorsement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linkedin_Profile__c</fullName>
        <label>LinkedIn Profile</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loc_E_SEO_Adoption_Contract_Length__c</fullName>
        <label>Loc E-SEO Adoption - Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loc_Enhanced_SEO_Adoption_Fees__c</fullName>
        <label>Loc Enhanced SEO Adoption Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loc_Enhanced_SEO_Adoption_Start_Date__c</fullName>
        <label>Loc Enhanced SEO Adoption - Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loc_Enhanced_SEO_Adoption_Target_Date__c</fullName>
        <label>Loc Enhanced SEO Adoption - Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loc_Enhanced_SEO_Adoption_Target__c</fullName>
        <label>Loc Enhanced SEO Adoption - % Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Local_Domain_Naming_Conventiondetails__c</fullName>
        <inlineHelpText>Example - www.CottmanofLocation.com</inlineHelpText>
        <label>Local Domain Naming Convention Details</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location_Enhanced_SEO_Contract_Length__c</fullName>
        <label>Location Enhanced SEO - Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Enhanced_SEO_Fee_Per_Location__c</fullName>
        <label>Location Enhanced SEO - Fee Per Location</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location_Enhanced_SEO_Setup_Fee_Per_Loc__c</fullName>
        <label>Location Enhanced SEO Setup Fee Per Loc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location_Enhanced_SEO_Setup_of_Loc_s__c</fullName>
        <label>Location Enhanced SEO Setup # of Loc's</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Enhanced_SEO_of_Locations__c</fullName>
        <label>Location Enhanced SEO # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Long_Term_Amount__c</fullName>
        <formula>(Corporate_Recurring_Total__c * National_Contract_Length_months__c )+
Corporate_Setup_Fees__c +
Corporate_Website_Fees__c +
(PV_Total_Amount__c *National_Contract_Length_months__c )+
(
(Website_Redesign_Fee__c + Setup_Fees__c )* (Number_of_corp_owned__c + of_Dealers__c + of_Franchised_Locations__c ) * Anticipated_Percent_Penetration__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Long Term Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Long_term_Revenue_Projection__c</fullName>
        <label>Long-term Revenue Projection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lost_Reason_Detail__c</fullName>
        <inlineHelpText>Please include additional information on the Lost Reason.  (ie. Who was the competitor? What Product Issues were mentioned?)</inlineHelpText>
        <label>Lost Reason Detail</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M003__c</fullName>
        <label>M003</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M003_to_M006__c</fullName>
        <formula>BLANKVALUE(M006__c,TODAY())- M003__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M003 to M006</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M003_to_M008__c</fullName>
        <formula>BLANKVALUE( M008__c ,TODAY())- M003__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M003 to M008</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M006__c</fullName>
        <label>M006</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M006_to_M008__c</fullName>
        <formula>M008__c - M006__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M006 to M008</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M008__c</fullName>
        <label>M008</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M1_Date__c</fullName>
        <label>M1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M2_Date__c</fullName>
        <label>M2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M3_Date__c</fullName>
        <label>M3 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MARGIN_ON_PRODUCTS_FOR_FRANCHISEE__c</fullName>
        <inlineHelpText>What is the franchisee margin on their products/services sold</inlineHelpText>
        <label>Margin on Products for Franchisee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maps_Claiming_and_Organic_History__c</fullName>
        <inlineHelpText>Details on any organic optimization completed in the past and whether or not listings were claimed</inlineHelpText>
        <label>Maps Claiming and Organic History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <description>Provided from Finance.  Used to Calculate the amount of ACV that will go towards quota</description>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mark_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Collateral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Collateral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Fund_Fee_Detail__c</fullName>
        <inlineHelpText>Specific marketing fund fee percentage or amount</inlineHelpText>
        <label>Marketing Fund Fee Detail</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Goals__c</fullName>
        <label>Marketing Goals</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Ownership_Detail__c</fullName>
        <inlineHelpText>Details on what aspect of marketing the agency managers verse corporate, how satisfied is the customer with the agency and how long is the customer's contract with the agency</inlineHelpText>
        <label>Marketing Ownership Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Strategy_3_Year_Vision__c</fullName>
        <label>Marketing Strategy 3 Year Vision</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Strategy_Overview__c</fullName>
        <inlineHelpText>What are they doing today?</inlineHelpText>
        <label>Current Marketing Strategy</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Max_Contract_Length__c</fullName>
        <label>Max Contract Length</label>
        <summarizedField>OpportunityLineItem.ContractLength__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Maximum_Contract_Length__c</fullName>
        <formula>MAX( Yodle_Web_Contract_Length__c , PPC_Contract_Length__c , Organic_Contract_Length__c , Review_Management_Contract_Length__c , Display_Contract_Length__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Media_Management_Fee__c</fullName>
        <label>Adoption / PPA Media Management Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Media_Management_Fee_of_Locations__c</fullName>
        <label>Media Management Fee # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Milestone_Last_Updated__c</fullName>
        <description>Time stamps the date of the last time the milestone was changed</description>
        <inlineHelpText>Time stamps the date of the last time the milestone was changed</inlineHelpText>
        <label>Milestone Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Minimum_Contract_Length__c</fullName>
        <label>Minimum Contract Length</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_contract_length_per_child_accoun__c</fullName>
        <label>Minimum contract length per child acct</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_fee_per_child_account_month__c</fullName>
        <label>Minimum fee per child account/month</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mobile_Implementation_Notes__c</fullName>
        <inlineHelpText>Example - Mobile site for a mirror</inlineHelpText>
        <label>Custom Mobile Implementation Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Modified_Milestone__c</fullName>
        <description>Hidden field associated with milestone trigger to remove description</description>
        <label>Milestone #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Average_Revenue__c</fullName>
        <description>This is a WBN opportunity field.  It is calculating the total amount of the opportunity subtracting out one time fees to let us average the recurring revenue normalized over the total contract length.  This helps with the seasonal ppc values..</description>
        <formula>IF (Contract_Term_in_months__c&gt;0,
(Amount - Total_One_Time_Fees_Sum__c)/ Contract_Term_in_months__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average recurring revenue including recurring feeds and seasonal ppc values averaged over the course of the entire contract..</inlineHelpText>
        <label>Monthly Average Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Display_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Monthly Display Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mutually_Agreed_Upon_Biz_Justification__c</fullName>
        <inlineHelpText>What problem is the customer trying to solve</inlineHelpText>
        <label>Mutually Agreed Upon Biz Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mutually_Agreed_Upon_Next_Steps__c</fullName>
        <inlineHelpText>What is the next step the customer agreed to. Example - in person meeting with the CMO and CEO to review  Yodle solutions. This should be updated regularly.</inlineHelpText>
        <label>Mutually Agreed Upon Next Steps</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NCSE_Commission__c</fullName>
        <description>old commission field..</description>
        <formula>IF( CloseDate &lt; DATEVALUE("2017-01-01"),Commissionable_Revenue_Amount__c  * 0.4,IF(Owner.Full_Name__c = "Ian Burris",Commissionable_Revenue_Amount__c  * 0.295,Commissionable_Revenue_Amount__c  * 0.27))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCSE Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NUMBER_OF_PRODUCTS_SERVICES_TO_SELL__c</fullName>
        <inlineHelpText>How many products &amp; services does the customer offer also known as SKUs</inlineHelpText>
        <label>Number of Products/Services Offered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Advertising_Fund__c</fullName>
        <inlineHelpText>What percent of the local office revenue goes to national ad fund?</inlineHelpText>
        <label>National Ad Fund</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Contract_Length_months__c</fullName>
        <inlineHelpText>how long is the contract with corporate in months</inlineHelpText>
        <label>Contract Length (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Prior_Existing_Advertising__c</fullName>
        <label>National Prior/Existing Advertising</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Acquisitions__c</fullName>
        <inlineHelpText>Have there been or are there going to be any mergers or acquisitions for the company?</inlineHelpText>
        <label>New Acquisitions?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Customers_per_Month_Goal__c</fullName>
        <inlineHelpText>Example - 5</inlineHelpText>
        <label>New Customers per Mth Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_clients_in_the_next_30_days__c</fullName>
        <label>New clients in the next 30 days?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Activity_Date__c</fullName>
        <label>Next Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Bill_Date__c</fullName>
        <label>Next Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step_Last_Updated_Date__c</fullName>
        <label>Next Step - Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_SA_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please check if a Solution Architect is not needed for this deal/opportunity.</description>
        <label>No SA Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Products_PPC_Seasonal__c</fullName>
        <description>Get a count of the PPC Seasonal Products.  To be used to determine commissions</description>
        <label>Number of Products PPC_Seasonal</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.ProductChargeType__c</field>
            <operation>equals</operation>
            <value>PPC Seasonal</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Products__c</fullName>
        <description>Roll-up Summary used in the Drawloop WBN IL contract. Number of products with the Product Charge Type of Recurring and PPC Seasonal.</description>
        <inlineHelpText>Count of the number of products when the product charge type is recurring or PPC Seasonal.</inlineHelpText>
        <label>Number of Products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.ProductChargeType__c</field>
            <operation>equals</operation>
            <value>Recurring, PPC Seasonal</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_corp_owned__c</fullName>
        <label>Total # of Corp-owned locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Hold_Reason__c</fullName>
        <description>Used By YBN.</description>
        <label>On Hold Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>One_time_Fees__c</fullName>
        <formula>If( 
RecordTypeId ="012600000009YRT", (Setup_Fees__c + Corporate_Website_Fees__c +  Facebook_Setup_Fee__c + Advanced_SEO_Setup_Fee_Per_Location__c +  Display_Setup_Fee_Per_Location__c ),

((Corporate_Setup_Fees__c   *   Setup_of_Locations__c )+ ( Actual_Creative_Service_Fee__c )+ (  Actual_Integration_Service_Fee__c )+ ( Actual_Project_Mgmt_Fee__c  )+ ( Advanced_SEO_Fee_Per_Location__c  *  Advanced_SEO_Setup_of_Locations__c )+ ( Display_Setup_Fee_Per_Location__c  *  Display_Setup_of_Locations__c ) + ( Facebook_Setup_Fee__c * Facebook_Setup_of_Locations__c ) + 
(Location_Enhanced_SEO_Setup_of_Loc_s__c * Location_Enhanced_SEO_Setup_Fee_Per_Loc__c) +
(Corporate_Enhanced_SEO_Setup_of_Loc__c * 
Corporate_Enhanced_SEO_Setup_Fee_Per_Loc__c)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One Time Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ongoing_Training_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ongoing Training Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_Annual_Marketing_Budget__c</fullName>
        <label>Online Annual Marketing Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Closed_Monthly_Spend__c</fullName>
        <formula>IF(IsWon, Corporate_Recurring_Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Closed Monthly Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Lost_Monthly_Spend__c</fullName>
        <formula>IF(ISPICKVAL(StageName, "Closed Lost"), Corporate_Recurring_Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Lost Monthly Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OpportunityCounter__c</fullName>
        <description>Used in reporting to sum up the number of opportunities.  Used by YBN.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityId18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <displayFormat>OPP-{00000}</displayFormat>
        <label>Opportunity ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Launched__c</fullName>
        <formula>if(
And(
 INCLUDES(Products__c ,"Centermark"),
ISBLANK(Organic_Launch_Date__c )),"Not Launched",
if(
And(
 INCLUDES(Products__c ,"Centermark Lite"),
ISBLANK(Organic_Launch_Date__c )),"Not Launched",
If(
And(
 INCLUDES(Products__c ,"Corporate Funded PPC"),
ISBLANK( Sponsored_Launch_Date__c  )),"Not Launched",
If(
And(
 INCLUDES(Products__c ,"Website Template"),
ISBLANK(  Website_Launch_Date__c  )),"Not Launched",
If(
AND(
 INCLUDES(Products__c ,"Custom Implementation"),
ISBLANK(  Custom_Implementation_Launch_Date__c  )),"Not Launched",
 If(
And(
INCLUDES(Products__c ,"None"),
ISBLANK(   Portal_Launch_Date__c   )),"Not Launched",
If(
And(
INCLUDES(Products__c ,"Corp Paid Reviews"),
ISBLANK(    Reviews_Launch_Date__c    )),"Not Launched",
If(
And(
INCLUDES(Products__c ,"Corporate Website"),
ISBLANK(     Website_Launch_Date__c     )),"Not Launched",
If(
And(
INCLUDES(Products__c ,"Lighthouse"),
ISBLANK(     Custom_Implementation_Launch_Date__c     )),"Not Launched",
If(
And(
 INCLUDES(Products__c ,"Corporate Funded Display"),
ISBLANK(  Display_Launch_Date__c   )),"Not Launched","Launched"))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Launched?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Link__c</fullName>
        <formula>HYPERLINK ("/" &amp;Id, "Opportunity Link")</formula>
        <label>Opportunity Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_PEV__c</fullName>
        <label>Opportunity PEV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Organic_Build_Process_Details__c</fullName>
        <label>Organic Build Process Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organic_Contract_End_Date__c</fullName>
        <formula>(Organic_Launch_Date__c )+( Organic_Contract_Length__c *30)+( Centermark_Contract_Length__c *30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organic/Centermark Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organic_Contract_Length__c</fullName>
        <label>Organic Contract Length</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organic_Launch_Date__c</fullName>
        <label>Centermark Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organic_Multiplier__c</fullName>
        <description>.</description>
        <formula>IF(OR( Organic_Contract_Length__c = 1, Organic_Contract_Length__c = 2, Organic_Contract_Length__c = 3, Organic_Contract_Length__c = 4, Organic_Contract_Length__c = 5), 0.8, (IF(OR(Organic_Contract_Length__c = 6,Organic_Contract_Length__c = 7, Organic_Contract_Length__c = 8, Organic_Contract_Length__c = 9, Organic_Contract_Length__c = 10, Organic_Contract_Length__c = 11),1, IF(Organic_Contract_Length__c &gt;=12, 1.2, 0) )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organic Multiplier</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organic_Need__c</fullName>
        <label>Organic Need</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organic__c</fullName>
        <label>Organic # of Locations</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organic_fees__c</fullName>
        <label>Organic/Foundations Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Organic_taxonomy_details__c</fullName>
        <label>Organic Taxonomy Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Competitors__c</fullName>
        <label>Other Competitors</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Performance_Goals__c</fullName>
        <label>Other Performance Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Out_of_Scope_Work_Details__c</fullName>
        <inlineHelpText>Details on work that is completed for a specific opportunity that is above and beyond the contractual agreement</inlineHelpText>
        <label>Out of Scope Work Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PEV_Penetration_Strategy__c</fullName>
        <label>Adoption Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PPA_Executed_Date__c</fullName>
        <inlineHelpText>Date of signed PPA</inlineHelpText>
        <label>Executed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PPA_Organic_Fee__c</fullName>
        <inlineHelpText>Organic fee per location as per PPA</inlineHelpText>
        <label>Adoption / PPA Foundations/Organic Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PPA_Reviews_Fee__c</fullName>
        <label>Adoption / PPA Reviews Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PPA_Website_Fee__c</fullName>
        <inlineHelpText>Fee for individual location website as per PPA</inlineHelpText>
        <label>Adoption / PPA Website Template Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PPC_Adoption_Length__c</fullName>
        <description>How long will PPC be running for these accounts?</description>
        <label>PPC Adoption Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPC_Adoption_Length_in_Months__c</fullName>
        <formula>(PPC_Adoption_Target_Date__c -PPC_Adoption_Start_Date__c)/30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PPC Adoption Length in Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPC_Adoption_Monthly_Value__c</fullName>
        <formula>If( PPC_Adoption_Length__c=0,0,(Forecasted_PPC_Adoption_Total_Value__c /  PPC_Adoption_Length__c  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PPC Adoption Monthly Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PPC_Adoption_Start_Date__c</fullName>
        <label>PPC Adoption -Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PPC_Adoption_Target_Date__c</fullName>
        <label>PPC AdoptionTarget Date</label>
        <type>Date</type>
    </fields>
</CustomObject>